# wallet-drf-api

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
alembic/: .env  env.py
alembic/versions/: 7c8fed6732a0_create_wallets_table.py  d62916dc5177_create_transactions_table.py
wallet/: .env
wallet/apps/api/: filters.py  serializers.py  urls.py  views.py
wallet/apps/api/tests/: test_transaction.py  test_wallet.py  utils.py
wallet/apps/transactions/: models.py
wallet/apps/wallets/: models.py
wallet/wallet/: settings.py  urls.py
